<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>actuators_broker</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="victor.dubois@free.fr">ubuntu</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
    <build_depend>krabi_msgs</build_depend>
    <build_depend>rclcpp</build_depend>
    <build_export_depend>krabi_msgs</build_export_depend>
    <build_export_depend>rclcpp</build_export_depend>
    <exec_depend>krabi_msgs</exec_depend>
    <exec_depend>rclcpp</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
